TSM-209: fix margin issue, ui, and truncate text

--- a/app/templates/List/Avatar.less
+++ b/app/templates/List/Avatar.less
@@ -75,7 +75,7 @@
         }
         i {
             height: 36px;
-            color: @apprentice;
+            color: #FAFAFA;
         }
     }
     &__picture {
