--- a/app/templates/List/List.less
+++ b/app/templates/List/List.less
@@ -4,7 +4,7 @@
 .list-line {
     width: 100%;
     height: 90px;
-    padding: 5px 15px;
+    padding: 5px 20px;
     display: inline-flex;
 
     .line-avatar {
@@ -18,7 +18,7 @@
         }
     }
 
-    .line-title {
+    .line {
         display: flex;
         flex-direction: column;
         flex-grow: 1;
@@ -33,17 +33,19 @@
             color: #337BB8;
             font-size: 14px;
             line-height: 15px;
+            margin-top: 2px;
             font-weight: bold;
             margin-bottom: 8px;
         }
 
         .description {
+            width: 220px;
             color: #737373;
             font-size: 12px;
-            line-height: 18px;
+            // line-height: 18px;
+            max-height: 33px;
             font-style: italic;
-            margin-top: auto;
-            margin-bottom: auto;
+            // margin-bottom: auto;
         }
     }
 
